MDEV-24856 : Server crashes when wsrep_provider_options set to NULL

Null pointer reference to wsrep_provider_options variable. Fixed
by adding condition and error handling.